# utilities

./: LICENSE  README.md
include/: aabb.h  closest_point_on_mesh.h  command_line_arguments.h  command_line_options.h  dual_contour.h  fast_marching_method.h  fixed_point.h  interpolation.h  level_set.h  locality_sensitive_hashing.h  marching_cubes.h  mesh_signed_distance.h  octree.h  options.h  scope.h  string_utils.h  timed_scope.h  triangle.h  unit_test.h  vec2.h  vec3.h  vtk_image_io.h
libs/: libmesh_signed_distance.dylib
source/mesh_signed_distance/: CMakeLists.txt  mesh_signed_distance.cpp  mesh_signed_distance_cgal.h
